# swl

./: .gitignore  Cargo.toml  README  README.md  rust-toolchain.toml
.githooks/: commit-msg  pre-commit
.githooks/checks/: rust-comments-check.sh
etc/: test-window.sh
src/: environment.rs  main.rs  startup.rs  state.rs
src/backend/: mod.rs
src/backend/kms/: device.rs  drm_helpers.rs  mod.rs
src/backend/kms/surface/: mod.rs  timings.rs
src/backend/render/: cursor.rs  element.rs  mod.rs
src/input/: keybindings.rs  mod.rs
src/shell/: mod.rs  popup.rs  tiling.rs  virtual_output.rs  workspace.rs
src/utils/: coordinates.rs  mod.rs
src/wayland/: data_control.rs  fractional_scale.rs  handlers.rs  layer_shell.rs  mod.rs  output_configuration.rs  primary_selection.rs  xdg_activation.rs
src/wayland/handlers/: dmabuf.rs  idle_inhibit.rs
