[package]
name = "swl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["swl contributors"]
license = "GPL-3.0-only"
description = "A minimal tiling Wayland compositor inspired by dwl/dwm"

[dependencies]
# Core smithay dependency
smithay = { git = "https://github.com/smithay/smithay.git", rev = "20d2dac", default-features = false, features = [
    "wayland_frontend",
    "desktop",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "renderer_glow",
    "renderer_multi",
] }

# Wayland protocol extensions
wayland-protocols-wlr = { version = "0.3", features = ["server"] }

# Dependencies for backend
indexmap = "2.10"
libc = "0.2"
drm = "0.14"
gbm = "0.18"

# Event loop
calloop = { version = "0.14.2", features = ["executor"] }

# Cursor support
xcursor = "0.3.5"

# Error handling and logging
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "2.0"
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"